--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "inshorts-clone",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://piyush-eon.github.io",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
