--- a/package.json
+++ b/package.json
@@ -1,9 +1,8 @@
 {
-  "homepage": "http://piyush-eon.github.io/react-news-app-inshorts-clone",
   "name": "inshorts-clone",
   "version": "0.1.0",
   "private": true,
-  "proxy": "https://piyush-eon.github.io",
+  "proxy": "http://127.0.0.1:5000",
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
@@ -12,6 +11,7 @@
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "gh-pages": "^3.1.0",
+    "inshorts-api": "^1.0.3",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
