--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
+    "dotenv": "^8.2.0",
     "gh-pages": "^3.1.0",
     "inshorts-api": "^1.0.3",
     "react": "^17.0.1",
